bte-promo-script/deploy/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bte-gastown
  labels:
    app.kubernetes.io/name: bte-gastown
